@@ -994,6 +994,11 @@ class HDUList(list, _Verify):
 
             # determine if any of the HDU is resized
             for hdu in self:
+                # A shortcut to let an HDU tell us for itself whether or not it
+                # will be resized
+                if hasattr(hdu, '_resize') and hdu._resize:
+                    self._resize = True
+                    break
 
                 # Header:
                 # Add 1 to .ascard to include the END card
